Fixed dark mode reanimating when user navigates or refreshes page
Now, sometimes when navigating to another navbar page or refreshing the screen will briefly show the initial starting point of the toggle button's div. At least it doesn't reanimate the whole animation. Also added transition only for toggle click.

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -43,10 +43,10 @@
 /* Switch - https://codepen.io/wilsonpage/pen/cxKEs */
 .switch {
     display: inline-block;
-    font-size: 20px;
+    font-size: 25px;
     height: 1em;
     width: 2em;
-    background: #BDB9A6;
+    background: #c9c9c9;
     border-radius: 1em;
 }
 .switch input {
@@ -59,9 +59,9 @@
     border-radius: 1em;
     background: #FFF;
     box-shadow: 0 0.1em 0.3em rgba(0,0,0,0.3);
-    -webkit-transition: all 300ms;
-       -moz-transition: all 300ms;
-            transition: all 300ms;
+    -webkit-transition: all 0ms;
+       -moz-transition: all 0ms;
+            transition: all 0ms;
 }
 .switch input:checked + div {
     -webkit-transform: translate3d(100%, 0, 0);
