--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,6 @@ code {
 }
 [data-theme="dark"] {
   --main-bg-color: rgb(50, 50, 50);
-  --container-bg-color: #e9e9e9;
+  --container-bg-color: #cfcfcf;
   --section-underline: rgb(50, 50, 50);
 }
